tests/NormalTests/paczka1/small_fuzzy/24357552.err
Error in line 10: BJxxGI1Wy4 A916 198,9
Error in line 12: BJxxGI1Wy4 A61 41,4
